2007-08-29  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberd.cfg.example: Updated mod_muc 'host' option default
	value (thanks to Badlop)

	* src/mod_muc/mod_muc_room.erl: The mod_muc option max_users now
	limits max number of users in rooms and max_users_admin_threshold
	sets a number of admin or owner accounts allowd to join after
	max_users occupants

2007-08-29  Mickael Remond  <mremond@process-one.net>

	* doc/guide.tex: Documentation for XML based optimisation build
	time option (EJAB-298)

2007-08-29  Alexey Shchepin  <alexey@process-one.net>
	
	* src/mod_muc/mod_muc_log.erl: Added missed HTMLization in a
	nickname change logging (thanks to Badlop)

2007-08-28  Mickael Remond  <mremond@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Changed default max number of user
	in a room to 200 (EJAB-248)

	* src/mod_offline_odbc.erl: Implements quota for offline messages
	in relational database (EJAB-314)
	* src/odbc/odbc_queries.erl: Likewise

2007-08-28  Alexey Shchepin  <alexey@process-one.net>

	* doc/guide.tex: Described @HOST@ feature (thanks to Badlop)

2007-08-26  Mickael Remond  <mremond@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Implements muc max users option
	from XEP-0045 (Thanks to Jerome Sautret) (EJAB-248).

2007-08-26  Alexey Shchepin  <alexey@process-one.net>

	* doc/guide.tex: Removed mentions of unexistent 'hosts' modules
	option (thanks to Badlop)

2007-08-25  Alexey Shchepin  <alexey@process-one.net>

	* src/gen_mod.erl: Substitute @HOST@ with hostname in the 'host'
	option (thanks to Badlop)
	* src/mod_vcard.erl: Likewise
	* src/mod_vcard_ldap.erl: Likewise
	* src/mod_vcard_odbc.erl: Likewise
	* src/mod_muc/mod_muc.erl: Likewise
	* src/mod_irc/mod_irc.erl: Likewise
	* src/mod_echo.erl: Likewise
	* src/mod_pubsub/mod_pubsub.erl: Likewise
	* src/mod_proxy65/mod_proxy65_service.erl: Likewise

2007-08-24  Alexey Shchepin  <alexey@process-one.net>

	* src/web/ejabberd_web_admin.erl: Moved roster stuff to mod_roster*