@@ -1,3 +1,8 @@
+2007-08-31  Mickael Remond  <mremond@process-one.net>
+
+	* src/web/ejabberd_web_admin.erl: Make the web interface pages
+	"translatable" (Thanks to Badlop) (EJAB-11).
+
 2007-08-29  Alexey Shchepin  <alexey@process-one.net>
 
 	* src/ejabberd.cfg.example: Updated mod_muc 'host' option default
